# oif-solver

./: BUNDLE_TRANSACTION_SPEC.md  Cargo.toml  code-analysis.md  summary.md
.github/workflows/: ci.yaml
config/: demo.toml
config/demo/: networks.toml
crates/solver-account/: Cargo.toml
crates/solver-config/src/: lib.rs
crates/solver-core/: Cargo.toml
crates/solver-core/src/engine/: context.rs  cost_profit.rs  mod.rs  token_manager.rs
crates/solver-core/src/handlers/: intent.rs  order.rs
crates/solver-core/src/monitoring/: transaction.rs
crates/solver-delivery/: Cargo.toml
crates/solver-delivery/src/: lib.rs
crates/solver-delivery/src/implementations/evm/: alloy.rs
crates/solver-delivery/src/implementations/signet/: bundle.rs
crates/solver-discovery/: Cargo.toml
crates/solver-discovery/src/: lib.rs
crates/solver-discovery/src/implementations/offchain/: _7683.rs
crates/solver-discovery/src/implementations/onchain/: _7683.rs
crates/solver-discovery/src/implementations/signet/: cache.rs  types.rs
crates/solver-order/: Cargo.toml
crates/solver-order/src/: lib.rs
crates/solver-pricing/: Cargo.toml
crates/solver-service/: Cargo.toml
crates/solver-service/src/: main.rs  server.rs  signature_validator.rs
crates/solver-service/src/apis/: order.rs
crates/solver-service/src/eip712/: mod.rs
crates/solver-settlement/: Cargo.toml
crates/solver-settlement/src/implementations/: direct.rs  hyperlane.rs
crates/solver-types/: Cargo.toml
crates/solver-types/src/: account.rs  api.rs  order.rs
(+6 files in other folders)
